Mon Jun 16 13:53:05 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/dlhweight.cc: DLH optimization.

Mon Jun 16 13:02:24 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: Need python3-sphinx to generate docs for python3.

Mon Jun 16 12:37:13 GMT 2014  Assem Chelli <assem.ch@gmail.com>

	* HACKING: Note sphinx-doc now needed (for Python bindings API docs).

Mon Jun 16 05:35:03 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING,configure.ac,docs/Makefile.am,docs/doxygen_api.conf.in:
	  Don't build, ship or install PDF versions of the API docs by
	  default, but provide an easy way for people to build it for
	  themselves if they want it.

Mon Jun 16 04:20:40 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Improve the descriptions of the
	  stem_strategy values.  (Reported by "oilap" on #xapian)

Fri Jun 13 07:52:53 GMT 2014  Olly Betts <olly@survex.com>

	* weight/dphweight.cc: Fix some comment typos.

Fri Jun 13 07:47:32 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/dphweight.cc: Optimized DPH code.

Fri Jun 13 01:39:07 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix ordering of "bm25" and "bool" in allegedly
	  sorted list, so that --weight bm25 and --weight bool work.

Thu Jun 12 13:49:19 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/extraweightpostlist.h: Add an assertion that get_sumextra()
	  returns a weight contribution which is <= the upper bound which
	  get_maxextra() returns.

Thu Jun 12 13:30:55 GMT 2014  Olly Betts <olly@survex.com>

	* api/leafpostlist.cc,matcher/synonympostlist.cc: Add assertions that
	  get_sumpart() returns a weight contribution which is <= the upper
	  bound which get_maxpart() returns.

Wed Jun 11 05:34:16 GMT 2014  Olly Betts <olly@survex.com>

	* languages/hungarian.sbl: Fix incorrect Unicode codepoints for
	  o-double-acute and u-double-acute in Hungarian Snowball stemmer.