@@ -52,10 +52,8 @@ IneB2Weight::clone() const
 }
 
 void
-IneB2Weight::init(double factor_)
+IneB2Weight::init(double factor)
 {
-    factor = factor_;
-
     double wdfn_upper(get_wdf_upper_bound());
     if (wdfn_upper == 0) {
 	upper_bound = 0.0;
@@ -78,11 +76,11 @@ IneB2Weight::init(double factor_)
     double idf_max = log2((N + 1.0) / (expected_max + 0.5));
 
     /* Calculate constant values used in get_sumpart(). */
-    wqf_product_idf = get_wqf() * idf_max;
+    wqf_product_idf = get_wqf() * idf_max * factor;
     c_product_avlen = param_c * get_average_length();
     B_constant = (F + 1.0) / termfreq;
 
-    upper_bound = max_wdfn_product_B * idf_max * get_wqf();
+    upper_bound = max_wdfn_product_B * idf_max * get_wqf() * factor;
 }
 
 string
@@ -116,15 +114,15 @@ IneB2Weight::get_sumpart(Xapian::termcount wdf, Xapian::termcount len) const
 
     wdfn *= log2(1 + c_product_avlen / len);
 
-    double wdfn_product_B = B_constant / (1.0 + 1.0 / wdfn);
+    double wdfn_product_B = wdfn * B_constant / (wdfn + 1.0);
 
-    return (wdfn_product_B * wqf_product_idf * factor);
+    return (wdfn_product_B * wqf_product_idf);
 }
 
 double
 IneB2Weight::get_maxpart() const
 {
-    return upper_bound * factor;
+    return upper_bound;
 }
 
 double
